--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		  <link rel="stylesheet" href="assets/css/bootstrap.css">
 <link rel="stylesheet" href="assignment.css">	 </head>
 	 <body>
-	      <div class="container-fluid"><!---container-->
+	      <div class="container"><!---container-->
 		      <div class="row" id="header"><!---first row-->
 			     <div class="col-sm-4">
 				     <img src="indexv.png" align="center" alt="" height="150px" style="border-radius:90px;margin:12px 12px 20px 5px;">
